--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -1,10 +1,11 @@
 skinshuffle:
+  button: "Modify Skin"
   carousel:
     title: "Skin Presets"
     confirmations:
       delete_preset:
         title: "Preset Deletion"
-        message: "Are you sure you want to delete this preset? (This action is irreversible.)"
+        message: "Are you sure you want to delete this preset?\n(This action is irreversible.)"
     preset_widget:
       edit: "Edit"
       copy: "Copy"
