--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -3,6 +3,7 @@ skinshuffle:
   carousel:
     title: "Skin Presets"
 
+    add_preset: "Add Preset"
     save_button: "Select Preset"
 
     # These are used for narrations.
