loadConfig -> loadPresets w/ various carousel changes

--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -3,7 +3,8 @@ skinshuffle:
   carousel:
     title: "Skin Presets"
 
-    add_preset: "Add Preset"
+    create: "Create"
+    new: "New Preset"
     save_button: "Select Preset"
 
     # These are used for narrations.
