--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -2,7 +2,7 @@ skinshuffle:
   offline:
     toast:
       title: "SkinShuffle cannot apply your skin."
-      message: "You are not authenticated, your skin will only be visible to you."
+      message: "You are not authenticated, your skin will only be visible to players with the mod."
   button: "Skin Presets"
   carousel:
     title: "Skin Presets"
