--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -1,4 +1,9 @@
 skinshuffle:
+  handshake:
+    toast:
+      title: "SkinShuffle is not installed on the server."
+      message_initial: "Any changes to your skin will require you to reconnect.\n(You can disable this toast in settings)"
+      message_on_change: "You will have to reconnect to allow other players to see your skin.\n(You can disable this toast in settings)"
   cooldown:
     toast:
       title: "Skin refresh has been scheduled."
