--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -1,6 +1,18 @@
 skinshuffle:
   config:
     title: "SkinShuffle"
+    popups:
+      title: "Popup Options"
+      description: "Configuration options regarding toasts and other popups that appear in-game in certain circumstances."
+      installed_toast:
+        name: "Disable \"Not Installed\" Toast"
+        description: "Disable the toast that appears when the mod is not installed on the server. We recommend you keep this enabled. However, we accept that it may be annoying if you primarily play on servers that do not have the mod."
+      cooldown_toast:
+        name: "Disable \"Cooldown\" Toast"
+        description: |-
+          Disable the toast that appears when you have switched skin preset during the cooldown period.
+          
+          The cooldown period exists due to caching issues related to the Mojang API. If you have switched skin preset during the cooldown period the toast will show - the server will not refresh your skin until the cooldown period is over.
     rendering:
       title: "Rendering Options"
       description: "Configuration options regarding how skin presets are rendered in the title screen, pause menu, carousel and edit screens."
@@ -9,6 +21,15 @@ skinshuffle:
       rendering_style: |-
         §lROTATION§r rotates the rendered player at a fixed rate specified by the rotation speed multiplier.
         §lCURSOR§r makes the rendered player look at the mouse cursor at all times, similarly to the inventory screen.
+      render_skin:
+        name: "Render Desynchronized Skin"
+        description: |-
+          Should your currently selected preset be applied to your skin regardless of if the server-side refresh has occurred?
+          
+          If enabled, this will mean that until a server-side skin refresh has occurred, only you will be able to see your newly set skin.
+          
+          §o§7When you change your selected skin preset, SkinShuffle asks the server to refresh your skin for all players.
+          §o§7The refresh might not occur instantly due to the cooldown period imposed by the caching issues of the Mojang API.
       carousel_rendering_style:
         name: "Carousel Rendering Style"
         description: "How should the currently selected skin preset be rendered in the carousel screen?\n"
@@ -18,6 +39,12 @@ skinshuffle:
       rotation_speed:
         name: "Rotation Speed Multiplier"
         description: "What rotation speed multiplier should be applied to skins if rotation is enabled?"
+      display_title_screen:
+        name: "Display Widget In Title Screen"
+        description: "Should the currently selected skin preset and the skin preset button be shown on the title screen?"
+      display_pause_screen:
+        name: "Display Widget In Pause Screen"
+        description: "Should the currently selected skin preset and the skin preset button be shown on the pause screen?"
   handshake:
     toast:
       title: "SkinShuffle isn't installed on the server."
