--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -95,10 +95,28 @@ skinshuffle:
       message: "Please check logs for more information."
     source:
       username: "Username"
+      invalid_username: |-
+        §4§nInvalid Username§r
+        
+        Usernames must consist of only alphanumeric characters, underscores and must be between 3-16 characters long.
       file: "File"
+      invalid_file: |-
+        §4§nInvalid File§r
+        
+        Files must exist and must be in the §l.png§r format.
       url: "URL"
+      invalid_url: |-
+        §4§nInvalid URL§r
+        
+        URL is invalid. Must be either a valid §lhttp§r or §lhttps§r URL.
       uuid: "UUID"
+      invalid_uuid:
+        §4§nInvalid UUID§r
+      resource_location: "Resource Location"
+      invalid_resource_location:
+        §4§nInvalid Resource Location§r
+      
+        Resource location must be a valid texture file that is loaded by the game.
 
       cycle_prefix: "Source"
-
       title: "Skin Source"
