--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -131,5 +131,6 @@ skinshuffle:
       
         Resource location must be a valid
         texture file that is loaded by the game.
+      unchanged: "Keep Current"
       cycle_prefix: "Source"
       title: "Skin Source"
