--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -63,7 +63,7 @@ skinshuffle:
         description: "What rotation speed multiplier should be applied to skins if rotation is enabled?"
   handshake:
     toast:
-      title: "SkinShuffle isn't installed on the server."
+      title: "Skin is not visible to others."
       message_initial: |-
         Any changes to your skin will require you to reconnect.
         §7§oYou can disable this toast in the config.
