Reconnect warning indicator

--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -1,5 +1,6 @@
 skinshuffle:
   reconnect:
+    warning: "You must %s to allow other players, including yourself, to see your skin."
     reconnecting: Reconnecting...
     rejoining: Rejoining...
     rejoin: rejoin
