Null check improvements

--- a/src/main/resources/assets/skinshuffle/lang/en_us.yml
+++ b/src/main/resources/assets/skinshuffle/lang/en_us.yml
@@ -1,7 +1,8 @@
 skinshuffle:
   indicator: "Warning Indicator"
   cape_provider:
-    default: "Default"
+    none: "None"
+    default: "Automatic"
     minecraft: "Mojang"
     optifine: "OptiFine"
     minecraftcapes: "MinecraftCapes"
