--- a/src/main/resources/assets/skinshuffle/lang/zh_tw.json
+++ b/src/main/resources/assets/skinshuffle/lang/zh_tw.json
@@ -39,19 +39,19 @@
   "skinshuffle.config.general.display_title_screen.description": "是否在主選單顯示目前所選外觀預設與外觀預設按鈕？",
   "skinshuffle.config.general.display_pause_screen.name": "暫停菜單顯示控制項",
   "skinshuffle.config.general.display_pause_screen.description": "是否在主選單顯示目前所選外觀預設與外觀預設按鈕？",
-  "skinshuffle.config.general.carousel_scroll_sensitivity.name": "紙娃娃滾動靈敏度",
-  "skinshuffle.config.general.carousel_scroll_sensitivity.description": "紙娃娃被滾動時的靈敏度？",
-  "skinshuffle.config.general.invert_carousel_scroll.name": "反轉紙娃娃滾動方向",
-  "skinshuffle.config.general.invert_carousel_scroll.description": "是否反轉紙娃娃被滾動時的方向?",
+  "skinshuffle.config.general.carousel_scroll_sensitivity.name": "預覽外觀滾動靈敏度",
+  "skinshuffle.config.general.carousel_scroll_sensitivity.description": "預覽外觀被滾動時的靈敏度？",
+  "skinshuffle.config.general.invert_carousel_scroll.name": "反轉預覽外觀滾動方向",
+  "skinshuffle.config.general.invert_carousel_scroll.description": "是否反轉預覽外觀被滾動時的方向?",
   "skinshuffle.config.rendering.title": "渲染選項",
-  "skinshuffle.config.rendering.description": "有關外觀預設在主選單、暫停菜單、紙娃娃和編輯界面如何渲染的配置。",
+  "skinshuffle.config.rendering.description": "有關外觀預設在主選單、暫停菜單、預覽外觀和編輯界面如何渲染的配置。",
   "skinshuffle.config.rendering.rotation": "旋轉",
   "skinshuffle.config.rendering.cursor": "游標",
   "skinshuffle.config.rendering.render_player_capes.name": "渲染玩家披風",
   "skinshuffle.config.rendering.render_player_capes.description": "SkinShuffle 是否要渲染來自 Mojang、Optifine 和 Minecraft Capes 的披風？",
   "skinshuffle.config.rendering.rendering_style": "§l旋轉§r 以由“旋轉倍速”所決定的固定速度旋轉。\n§l游標§r 使被渲染的玩家始終看向玩家游標，類似於物品欄內。",
-  "skinshuffle.config.rendering.carousel_rendering_style.name": "紙娃娃渲染樣式",
-  "skinshuffle.config.rendering.carousel_rendering_style.description": "如何渲染在紙娃娃頁面內的目前所選外觀預設？\n",
+  "skinshuffle.config.rendering.carousel_rendering_style.name": "預覽外觀渲染樣式",
+  "skinshuffle.config.rendering.carousel_rendering_style.description": "如何渲染在預覽外觀頁面內的目前所選外觀預設？\n",
   "skinshuffle.config.rendering.preset_edit_screen_rendering_style.name": "預覽渲染樣式",
   "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "如何渲染在預設編輯頁面的目前預覽？\n",
   "skinshuffle.config.rendering.widget_rendering_style.name": "控制項渲染樣式",
@@ -69,8 +69,8 @@
   "skinshuffle.carousel.create": "新建",
   "skinshuffle.carousel.new": "新建預設",
   "skinshuffle.carousel.save_button": "選擇預設",
-  "skinshuffle.carousel.left": "紙娃娃向左移動",
-  "skinshuffle.carousel.right": "紙娃娃向右移動",
+  "skinshuffle.carousel.left": "預覽外觀向左移動",
+  "skinshuffle.carousel.right": "預覽外觀向右移動",
   "skinshuffle.carousel.confirmations.delete_preset.title": "刪除預設",
   "skinshuffle.carousel.confirmations.delete_preset.message": "您確定要刪除這個預設嗎？\n它將會永久消失！（真的很久！）",
   "skinshuffle.carousel.preset_widget.edit": "編輯",
