--- a/src/main/resources/assets/skinshuffle/lang/zh_tw.json
+++ b/src/main/resources/assets/skinshuffle/lang/zh_tw.json
@@ -5,9 +5,9 @@
   "skinshuffle.cape_provider.minecraft": "Mojang",
   "skinshuffle.cape_provider.optifine": "OptiFine",
   "skinshuffle.cape_provider.minecraftcapes": "MinecraftCapes",
-  "skinshuffle.reconnect.warning": "您需要 %s 以允許包括自身的玩家看見您的外觀。",
+  "skinshuffle.reconnect.warning": "您必須 %s 才能讓其他玩家（包括您自己）看到您的外觀。",
   "skinshuffle.reconnect.reconnecting": "重新連線中...",
-  "skinshuffle.reconnect.rejoining": "重新加入中...",
+  "skinshuffle.reconnect.rejoining": "正在重新加入...",
   "skinshuffle.reconnect.rejoin": "重新加入",
   "skinshuffle.reconnect.c_rejoin": "重新加入",
   "skinshuffle.reconnect.reconnect_to": "重新連線至",
@@ -17,83 +17,83 @@
   "skinshuffle.reconnect.server": "伺服器",
   "skinshuffle.reconnect.realm": "Realm",
   "skinshuffle.reconnect.title": "建議 %s",
-  "skinshuffle.reconnect.message": "如果您想要您的外觀對他人可見，您需要 %s 目前的 %s。\n\n是否 %s？",
-  "skinshuffle.toasts.refused_reconnect.title": "外觀對他人不可見。",
-  "skinshuffle.toasts.refused_reconnect.message": "您必須重新連線才能使其他人看到您的外觀。\n§7§o您可以在配置裡關閉該跳出視窗。",
-  "skinshuffle.toasts.offline.title": "SkinShuffle 無法應用您的外觀。",
-  "skinshuffle.toasts.offline.message": "您尚未驗證，外觀僅對自己可見。\n§7§o您可以在配置裡關閉該跳出視窗。",
+  "skinshuffle.reconnect.message": "如果您想要您的外觀對您和其他人可見，您必須 %s 目前的 %s。\n\n要 %s 嗎？",
+  "skinshuffle.toasts.refused_reconnect.title": "外觀對其他人不可見。",
+  "skinshuffle.toasts.refused_reconnect.message": "您必須重新連線才能使其他人看到您的外觀。\n§7§o您可以在設定中停用這個提示。",
+  "skinshuffle.toasts.offline.title": "SkinShuffle 無法套用您的外觀。",
+  "skinshuffle.toasts.offline.message": "您未經驗證，外觀僅對您自己可見。\n§7§o您可以在設定中停用這個提示。",
   "skinshuffle.toasts.editor_failure.title": "編輯器發生錯誤。",
-  "skinshuffle.toasts.editor_failure.message": "請檢查日誌以取得更多資訊。",
+  "skinshuffle.toasts.editor_failure.message": "請檢查記錄檔以取得更多資訊。",
   "skinshuffle.config.title": "SkinShuffle",
-  "skinshuffle.config.popups.title": "跳出視窗選項",
-  "skinshuffle.config.popups.description": "設置有關遊戲內某些情況下出現的提示和其他彈出窗口的選項。",
-  "skinshuffle.config.popups.reconnect.name": "停用外觀可見性跳出視窗",
-  "skinshuffle.config.popups.reconnect.description": "停用在您更換外觀後沒有重連時跳出視窗的彈出。\n\n該提示僅顯示在未安裝本模組的伺服器上。",
+  "skinshuffle.config.popups.title": "彈出式視窗選項",
+  "skinshuffle.config.popups.description": "關於在特定情況下遊戲內出現的提示和其他彈出式視窗的設定選項。",
+  "skinshuffle.config.popups.reconnect.name": "停用外觀可見度提示",
+  "skinshuffle.config.popups.reconnect.description": "停用在變更外觀後未重新連線時出現的提示。\n\n這個提示僅在未安裝這個模組的伺服器上顯示。",
   "skinshuffle.config.general.title": "一般選項",
-  "skinshuffle.config.general.description": "更改或切換功能的總選項。",
+  "skinshuffle.config.general.description": "變更或切換功能的總選項。",
   "skinshuffle.config.general.behaviour.title": "行為",
   "skinshuffle.config.general.display.title": "顯示",
   "skinshuffle.config.general.disable_api.name": "停用 Mojang API 上傳",
-  "skinshuffle.config.general.disable_api.description": "SkinShuffle 是否不將外觀上傳至 Mojang API？\n\n如果啟用，意味著您的外觀將對您自己或他人不可見。",
-  "skinshuffle.config.general.display_title_screen.name": "主選單顯示控制項",
-  "skinshuffle.config.general.display_title_screen.description": "是否在主選單顯示目前所選外觀預設與外觀預設按鈕？",
-  "skinshuffle.config.general.display_pause_screen.name": "暫停菜單顯示控制項",
-  "skinshuffle.config.general.display_pause_screen.description": "是否在主選單顯示目前所選外觀預設與外觀預設按鈕？",
-  "skinshuffle.config.general.carousel_scroll_sensitivity.name": "預覽外觀滾動靈敏度",
-  "skinshuffle.config.general.carousel_scroll_sensitivity.description": "預覽外觀被滾動時的靈敏度？",
-  "skinshuffle.config.general.invert_carousel_scroll.name": "反轉預覽外觀滾動方向",
-  "skinshuffle.config.general.invert_carousel_scroll.description": "是否反轉預覽外觀被滾動時的方向?",
-  "skinshuffle.config.rendering.title": "渲染選項",
-  "skinshuffle.config.rendering.description": "有關外觀預設在主選單、暫停菜單、預覽外觀和編輯界面如何渲染的配置。",
+  "skinshuffle.config.general.disable_api.description": "是否應讓 SkinShuffle 不將你的外觀上傳到 Mojang API？\n\n若啟用，表示你的外觀將對你自己或其他玩家不可見。",
+  "skinshuffle.config.general.display_title_screen.name": "在標題畫面顯示小工具",
+  "skinshuffle.config.general.display_title_screen.description": "是否應在標題畫面上顯示目前選擇的外觀預設和外觀預設按鈕？",
+  "skinshuffle.config.general.display_pause_screen.name": "在暫停畫面顯示小工具",
+  "skinshuffle.config.general.display_pause_screen.description": "是否應在暫停畫面上顯示目前選擇的外觀預設和外觀預設按鈕？",
+  "skinshuffle.config.general.carousel_scroll_sensitivity.name": "預覽外觀捲動靈敏度",
+  "skinshuffle.config.general.carousel_scroll_sensitivity.description": "預覽外觀時滑鼠捲動的靈敏度應該是多少？",
+  "skinshuffle.config.general.invert_carousel_scroll.name": "反轉預覽外觀捲動方向",
+  "skinshuffle.config.general.invert_carousel_scroll.description": "是否應反轉預覽外觀的捲動方向？",
+  "skinshuffle.config.rendering.title": "繪製選項",
+  "skinshuffle.config.rendering.description": "關於如何在標題畫面、暫停選單、預覽外觀和編輯畫面中繪製外觀預設的設定選項。",
   "skinshuffle.config.rendering.rotation": "旋轉",
   "skinshuffle.config.rendering.cursor": "游標",
-  "skinshuffle.config.rendering.render_player_capes.name": "渲染玩家披風",
-  "skinshuffle.config.rendering.render_player_capes.description": "SkinShuffle 是否要渲染來自 Mojang、Optifine 和 Minecraft Capes 的披風？",
-  "skinshuffle.config.rendering.rendering_style": "§l旋轉§r 以由“旋轉倍速”所決定的固定速度旋轉。\n§l游標§r 使被渲染的玩家始終看向玩家游標，類似於物品欄內。",
-  "skinshuffle.config.rendering.carousel_rendering_style.name": "預覽外觀渲染樣式",
-  "skinshuffle.config.rendering.carousel_rendering_style.description": "如何渲染在預覽外觀頁面內的目前所選外觀預設？\n",
-  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.name": "預覽渲染樣式",
-  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "如何渲染在預設編輯頁面的目前預覽？\n",
-  "skinshuffle.config.rendering.widget_rendering_style.name": "控制項渲染樣式",
-  "skinshuffle.config.rendering.widget_rendering_style.description": "如何渲染在主選單或暫停菜單的控制項？\n",
-  "skinshuffle.config.rendering.rotation_speed.name": "旋轉倍速",
-  "skinshuffle.config.rendering.rotation_speed.description": "如果外觀旋轉開啟它將被運用多少的旋轉倍速？",
+  "skinshuffle.config.rendering.render_player_capes.name": "繪製玩家披風",
+  "skinshuffle.config.rendering.render_player_capes.description": "SkinShuffle 是否應繪製來自 Mojang、OptiFine 和 Minecraft Capes 的披風？",
+  "skinshuffle.config.rendering.rendering_style": "§l旋轉§r 以固定的速率旋轉繪製的玩家，速率由「旋轉速度倍率」設定。\n§l游標§r 使繪製的玩家始終看著滑鼠游標，類似於物品欄畫面。",
+  "skinshuffle.config.rendering.carousel_rendering_style.name": "預覽外觀繪製風格",
+  "skinshuffle.config.rendering.carousel_rendering_style.description": "目前選擇的外觀預設應如何在預覽外觀畫面中繪製？\n",
+  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.name": "預覽繪製風格",
+  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "外觀預覽應如何在預設編輯畫面中繪製？\n",
+  "skinshuffle.config.rendering.widget_rendering_style.name": "小工具繪製風格",
+  "skinshuffle.config.rendering.widget_rendering_style.description": "標題畫面和暫停畫面上的小工具應如何繪製？\n",
+  "skinshuffle.config.rendering.rotation_speed.name": "旋轉速度倍率",
+  "skinshuffle.config.rendering.rotation_speed.description": "若啟用外觀旋轉，它應套用多少旋轉速度倍率？",
   "skinshuffle.button": "外觀預設",
   "skinshuffle.carousel.title": "外觀預設",
-  "skinshuffle.carousel.config_button.tooltip": "打開配置。",
-  "skinshuffle.carousel.view_type_button.large.tooltip": "寬鬆視圖。",
-  "skinshuffle.carousel.view_type_button.compact.tooltip": "緊湊視圖。",
-  "skinshuffle.carousel.shuffle_button.tooltip.enable": "啟用切換。",
-  "skinshuffle.carousel.shuffle_button.tooltip.disable": "停用停用切換。",
+  "skinshuffle.carousel.config_button.tooltip": "開啟設定畫面。",
+  "skinshuffle.carousel.view_type_button.large.tooltip": "大型檢視。",
+  "skinshuffle.carousel.view_type_button.compact.tooltip": "精簡檢視。",
+  "skinshuffle.carousel.shuffle_button.tooltip.enable": "啟用外觀預覽。",
+  "skinshuffle.carousel.shuffle_button.tooltip.disable": "停用外觀預覽。",
   "skinshuffle.carousel.default_tooltip": "§4您不能修改或複製默認預設。",
-  "skinshuffle.carousel.create": "新建",
-  "skinshuffle.carousel.new": "新建預設",
+  "skinshuffle.carousel.create": "新增",
+  "skinshuffle.carousel.new": "新增預設",
   "skinshuffle.carousel.save_button": "選擇預設",
   "skinshuffle.carousel.left": "預覽外觀向左移動",
   "skinshuffle.carousel.right": "預覽外觀向右移動",
   "skinshuffle.carousel.confirmations.delete_preset.title": "刪除預設",
-  "skinshuffle.carousel.confirmations.delete_preset.message": "您確定要刪除這個預設嗎？\n它將會永久消失！（真的很久！）",
+  "skinshuffle.carousel.confirmations.delete_preset.message": "您確定要刪除這個預設嗎？\n它將會永遠消失！（非常久！）",
   "skinshuffle.carousel.preset_widget.edit": "編輯",
   "skinshuffle.carousel.preset_widget.copy": "複製",
   "skinshuffle.carousel.preset_widget.delete": "刪除",
   "skinshuffle.carousel.preset_widget.select": "選擇",
-  "skinshuffle.edit.customize.title": "預設設置",
+  "skinshuffle.edit.customize.title": "預設設定",
   "skinshuffle.edit.customize.default": "經典",
-  "skinshuffle.edit.customize.slim": "纖細",
+  "skinshuffle.edit.customize.slim": "苗條",
   "skinshuffle.edit.customize.model_cycle_prefix": "手臂模型",
   "skinshuffle.edit.customize.preset_name": "預設名稱",
   "skinshuffle.edit.customize.cape_provider": "披風來源",
-  "skinshuffle.edit.source.username": "無效的使用者名",
-  "skinshuffle.edit.source.invalid_username": "§4§n無效的使用者名§r\n\n使用者名只能包含 a-Z、0-9；\n使用者名可以包含下劃線；\n使用者名長度需為 3-16 字元；\n使用者名必須存在。",
-  "skinshuffle.edit.source.file": "文件",
-  "skinshuffle.edit.source.invalid_file": "§4§n無效的文件§r\n\n文件必須存在併且為 §l.png§r 格式。",
+  "skinshuffle.edit.source.username": "無效的使用者名稱",
+  "skinshuffle.edit.source.invalid_username": "§4§n無效的使用者名§r\n\n使用者名只能包含字母 A-Z、數字 0-9；\n使用者名稱可以包含底線；\n使用者名稱長度必須介於 3 到 16 個字元之間；\n使用者名必須存在。",
+  "skinshuffle.edit.source.file": "檔案",
+  "skinshuffle.edit.source.invalid_file": "§4§n無效的檔案§r\n\n檔案必須存在並且為 §l.png§r 格式。",
   "skinshuffle.edit.source.url": "URL",
-  "skinshuffle.edit.source.invalid_url": "§4§n無效的 URL§r\n\nURL 無效。必須為有效的 §lhttp§r 或 §lhttps§r 協議 URL。",
+  "skinshuffle.edit.source.invalid_url": "§4§n無效的網址§r\n\n網址無效。必須為有效的  §lhttp§r 或 §lhttps§r 協定網址。",
   "skinshuffle.edit.source.uuid": "UUID",
-  "skinshuffle.edit.source.invalid_uuid": "§4§n無效的UUID§r\n\nUUID 需為以下格式：\n§lxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
+  "skinshuffle.edit.source.invalid_uuid": "§4§n無效的 UUID§r\n\nUUID 需為以下格式：\n§lxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
   "skinshuffle.edit.source.resource_location": "資源位置",
-  "skinshuffle.edit.source.invalid_resource_location": "§4§n無效的資源位置§r\n\n資源位置需為已被遊戲載入且有效的紋理文件。",
-  "skinshuffle.edit.source.unchanged": "保持現狀",
+  "skinshuffle.edit.source.invalid_resource_location": "§4§n無效的資源位置§r\n\n資源位置需為已被遊戲載入且有效的紋理檔案。",
+  "skinshuffle.edit.source.unchanged": "維持目前設定",
   "skinshuffle.edit.source.cycle_prefix": "來源",
   "skinshuffle.edit.source.title": "外觀來源",
   "skinshuffle.edit.source.skin_model": "外觀模型",
