Apply suggestions from code review
Co-authored-by: notlin4 <121224522+notlin4@users.noreply.github.com>

--- a/src/main/resources/assets/skinshuffle/lang/zh_tw.json
+++ b/src/main/resources/assets/skinshuffle/lang/zh_tw.json
@@ -6,7 +6,7 @@
   "skinshuffle.cape_provider.optifine": "OptiFine",
   "skinshuffle.cape_provider.minecraftcapes": "MinecraftCapes",
   "skinshuffle.reconnect.warning": "您必須 %s 才能讓其他玩家（包括您自己）看到您的外觀。",
-  "skinshuffle.reconnect.reconnecting": "重新連線中...",
+  "skinshuffle.reconnect.reconnecting": "正在重新連線...",
   "skinshuffle.reconnect.rejoining": "正在重新加入...",
   "skinshuffle.reconnect.rejoin": "重新加入",
   "skinshuffle.reconnect.c_rejoin": "重新加入",
