--- a/src/main/resources/assets/skinshuffle/lang/ko_kr.json
+++ b/src/main/resources/assets/skinshuffle/lang/ko_kr.json
@@ -5,11 +5,11 @@
   "skinshuffle.cape_provider.minecraft": "모장",
   "skinshuffle.cape_provider.optifine": "옵티파인",
   "skinshuffle.cape_provider.minecraftcapes": "MinecraftCapes",
-  "skinshuffle.reconnect.warning": "바뀐 스킨을 적용하기 위해 %s이 필요합니다.",
+  "skinshuffle.reconnect.warning": "바뀐 스킨을 적용하기 위해 %s이(가) 필요합니다.",
   "skinshuffle.reconnect.reconnecting": "재접속중...",
-  "skinshuffle.reconnect.rejoining": "재접속중...",
-  "skinshuffle.reconnect.rejoin": "재접속",
-  "skinshuffle.reconnect.c_rejoin": "재접속",
+  "skinshuffle.reconnect.rejoining": "재참가중...",
+  "skinshuffle.reconnect.rejoin": "재참가",
+  "skinshuffle.reconnect.c_rejoin": "재참가",
   "skinshuffle.reconnect.reconnect_to": "재접속 -",
   "skinshuffle.reconnect.reconnect": "재접속",
   "skinshuffle.reconnect.c_reconnect": "재접속",
@@ -17,13 +17,13 @@
   "skinshuffle.reconnect.server": "서버",
   "skinshuffle.reconnect.realm": "렐름",
   "skinshuffle.reconnect.title": "%s 필요",
-  "skinshuffle.reconnect.message": "If you want your skin to be visible to you and other players, you must %s the current %s.\n\nDo you want to %s?",
-  "skinshuffle.toasts.refused_reconnect.title": "Skin is not visible to others.",
-  "skinshuffle.toasts.refused_reconnect.message": "You will have to reconnect for your skin to be visible to other players.\n§7§oYou can disable this toast in the config.",
+  "skinshuffle.reconnect.message": "바뀐 스킨을 다른 플레이어에게 표시하기 위해 %s이(가) 필요합니다.\n\n%s에 %s을(를) 하시겠습니까?",
+  "skinshuffle.toasts.refused_reconnect.title": "다른 플레이어는 바뀐 스킨을 보고 있지 않습니다.",
+  "skinshuffle.toasts.refused_reconnect.message": "바뀐 스킨을 표시하기 위해 재접속이 필요합니다.\n§7§o설정에서 이 화면을 숨길 수 있습니다.",
   "skinshuffle.toasts.offline.title": "스킨 적용 불가",
-  "skinshuffle.toasts.offline.message": "You are not authenticated, your skin will only be visible to you.\n§7§oYou can disable this toast in the config.",
-  "skinshuffle.toasts.editor_failure.title": "There was a failure with the editor.",
-  "skinshuffle.toasts.editor_failure.message": "Please check logs for more information.",
+  "skinshuffle.toasts.offline.message": "인증이 만료되어 스킨을 적용할 수 없습니다.\n§7§o설정에서 이 화면을 숨길 수 있습니다.",
+  "skinshuffle.toasts.editor_failure.title": "에디터에 문제가 생겨 작업을 실패했습니다.",
+  "skinshuffle.toasts.editor_failure.message": "자세한 정보는 로그를 참조하세요.",
   "skinshuffle.config.title": "SkinShuffle",
   "skinshuffle.config.popups.title": "팝업 설정",
   "skinshuffle.config.popups.description": "Configuration options regarding toasts and other popups that appear in-game in certain circumstances.",
@@ -93,9 +93,9 @@
   "skinshuffle.edit.source.invalid_uuid": "§4§nInvalid UUID§r\n\nUUID must be in the following format:\n§lxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
   "skinshuffle.edit.source.resource_location": "리소스 위치",
   "skinshuffle.edit.source.invalid_resource_location": "§4§nInvalid Resource Location§r\n\nResource location must be a valid\ntexture file that is loaded by the game.",
-  "skinshuffle.edit.source.unchanged": "유지",
-  "skinshuffle.edit.source.cycle_prefix": "소스",
-  "skinshuffle.edit.source.title": "스킨 소스",
+  "skinshuffle.edit.source.unchanged": "변경 없음",
+  "skinshuffle.edit.source.cycle_prefix": "파일 위치",
+  "skinshuffle.edit.source.title": "스킨 파일 위치",
   "skinshuffle.edit.source.skin_model": "스킨 모델",
   "skinshuffle.edit.source.load_skin": "스킨 불러오기"
 }
