--- a/src/main/resources/assets/skinshuffle/lang/ko_kr.json
+++ b/src/main/resources/assets/skinshuffle/lang/ko_kr.json
@@ -26,38 +26,38 @@
   "skinshuffle.toasts.editor_failure.message": "자세한 정보는 로그를 참조하세요.",
   "skinshuffle.config.title": "SkinShuffle",
   "skinshuffle.config.popups.title": "팝업 설정",
-  "skinshuffle.config.popups.description": "Configuration options regarding toasts and other popups that appear in-game in certain circumstances.",
+  "skinshuffle.config.popups.description": "특정 상황에서 인게임 안에서 나타나는 토스트/팝업 화면을 설정합니다.",
   "skinshuffle.config.popups.reconnect.name": "스킨 적용 경고 끄기",
-  "skinshuffle.config.popups.reconnect.description": "Disable the toast that appears when you do not reconnect after changing your skin.\n\nThis only shows on servers without the mod installed.",
+  "skinshuffle.config.popups.reconnect.description": "스킨을 바꾼 뒤에 재접속을 하지 않으면 나나타는 토스트를 끕니다.\n\n이는 서버에 모드가 설치되지 않은 경우에만 볼 수 있습니다.",
   "skinshuffle.config.general.title": "일반 설정",
-  "skinshuffle.config.general.description": "General configuration options that change or toggle functionality.",
+  "skinshuffle.config.general.description": "일반적인 설정을 할 수 있는 곳입니다.",
   "skinshuffle.config.general.behaviour.title": "작용",
   "skinshuffle.config.general.display.title": "표시",
   "skinshuffle.config.general.disable_api.name": "Mojang API 업로딩 끄기",
-  "skinshuffle.config.general.disable_api.description": "Should SkinShuffle not upload your skin to the Mojang API?\n\nIf enabled, this will mean that your skin will not be visible to yourself or other players.",
+  "skinshuffle.config.general.disable_api.description": "바꾼 스킨을 Mojang API에 전송하지 않습니다.\n\n켜지면 다른 사람들은 당신이 바꾼 스킨을 볼 수 없습니다.",
   "skinshuffle.config.general.display_title_screen.name": "메인 화면에 위젯 표시",
-  "skinshuffle.config.general.display_title_screen.description": "Should the currently selected skin preset and the skin preset button be shown on the title screen?",
+  "skinshuffle.config.general.display_title_screen.description": "스킨 미리보기와 버튼을 메인 타이틀 화면에 표시할지 정합니다.",
   "skinshuffle.config.general.display_pause_screen.name": "일시 정지 화면에 위젯 표시",
-  "skinshuffle.config.general.display_pause_screen.description": "Should the currently selected skin preset and the skin preset button be shown on the pause screen?",
+  "skinshuffle.config.general.display_pause_screen.description": "스킨 미리보기와 버튼을 일시 정지 화면에 표시할지 정합니다.",
   "skinshuffle.config.general.carousel_scroll_sensitivity.name": "회전 감도",
-  "skinshuffle.config.general.carousel_scroll_sensitivity.description": "How sensitive should the carousel be to mouse scrolling?",
+  "skinshuffle.config.general.carousel_scroll_sensitivity.description": "마우스로 움직일떄의 감도입니다.",
   "skinshuffle.config.general.invert_carousel_scroll.name": "반대로 회전",
-  "skinshuffle.config.general.invert_carousel_scroll.description": "Should the carousel scroll direction be inverted?",
+  "skinshuffle.config.general.invert_carousel_scroll.description": "회전 방향이 반전됩니다.",
   "skinshuffle.config.rendering.title": "렌더링 설정",
-  "skinshuffle.config.rendering.description": "Configuration options regarding how skin presets are rendered in the title screen, pause menu, carousel and edit screens.",
+  "skinshuffle.config.rendering.description": "화면별로 나타나는 스킨의 렌더링을 조정할수 있는 곳입니다.",
   "skinshuffle.config.rendering.rotation": "회전",
   "skinshuffle.config.rendering.cursor": "커서",
   "skinshuffle.config.rendering.render_player_capes.name": "플레이어 망토 표시",
-  "skinshuffle.config.rendering.render_player_capes.description": "Should SkinShuffle render player capes from Mojang, Optifine and Minecraft Capes providers?",
-  "skinshuffle.config.rendering.rendering_style": "§lROTATION§r rotates the rendered player at a fixed rate specified by the rotation speed multiplier.\n§lCURSOR§r makes the rendered player look at the mouse cursor at all times, similarly to the inventory screen.",
-  "skinshuffle.config.rendering.carousel_rendering_style.name": "회전체 렌더링 스타일",
-  "skinshuffle.config.rendering.carousel_rendering_style.description": "How should the currently selected skin preset be rendered in the carousel screen?\n",
+  "skinshuffle.config.rendering.render_player_capes.description": "모장, 옵티파인, MinecraftCapes에서 플레이어 망토를 가져와 렌더링을 할지 정합니다.",
+  "skinshuffle.config.rendering.rendering_style": "§l회전§r은 렌더링된 플레이어를 회전 속도 배수로 일정하게 회전시킵니다.\n§l커서§r는 렌더링된 플레이어가 인벤토리 화면과 유사하게 항상 마우스 커서를 바라보도록 만듭니다.",
+  "skinshuffle.config.rendering.carousel_rendering_style.name": "회전 렌더링 스타일",
+  "skinshuffle.config.rendering.carousel_rendering_style.description": "현재 선택된 스킨 프리셋 설정을 회전 화면에서 어떻게 렌더링 할지 정합니다.",
   "skinshuffle.config.rendering.preset_edit_screen_rendering_style.name": "프리뷰 렌더링 스타일",
-  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "How should the skin preview be rendered in the preset edit screen?\n",
+  "skinshuffle.config.rendering.preset_edit_screen_rendering_style.description": "프리셋 편집 화면에서 스킨 프리뷰를 어떻게 렌더링 할지 정합니다.",
   "skinshuffle.config.rendering.widget_rendering_style.name": "위젯 렌더링 스타일",
-  "skinshuffle.config.rendering.widget_rendering_style.description": "How should the widget on the title screen and pause screen be rendered?\n",
+  "skinshuffle.config.rendering.widget_rendering_style.description": "타이틀 화면과 일시 정지 화면의 위젯을 어떻게 렌더링 할지 정합니다.",
   "skinshuffle.config.rendering.rotation_speed.name": "회전 속도 배율",
-  "skinshuffle.config.rendering.rotation_speed.description": "What rotation speed multiplier should be applied to skins if rotation is enabled?",
+  "skinshuffle.config.rendering.rotation_speed.description": "렌더링이 회전이라면 얼마나 회전할지 감도를 정합니다.",
   "skinshuffle.button": "스킨 프리셋",
   "skinshuffle.carousel.title": "스킨 프리셋",
   "skinshuffle.carousel.config_button.tooltip": "설정 열기",
@@ -84,15 +84,15 @@
   "skinshuffle.edit.customize.preset_name": "프리셋 이름",
   "skinshuffle.edit.customize.cape_provider": "망토 제공처",
   "skinshuffle.edit.source.username": "닉네임",
-  "skinshuffle.edit.source.invalid_username": "§4§nInvalid Username§r\n\nUsername must only contain a-Z 0-9.\nUsername may contain underscores.\nUsername must be between 3-16 characters long.\nUsername must exist.",
+  "skinshuffle.edit.source.invalid_username": "§4§n올바르지 않은 닉네임§r\n\n닉네임은 a-Z 0-9 그리고 _만 포함할 수 있습니다.\n닉네임은 3-16 글자 길이를 가지고 있습니다.\n그리고 가장 중요한 것으로 닉네임은 존재해야 합니다.",
   "skinshuffle.edit.source.file": "파일",
-  "skinshuffle.edit.source.invalid_file": "§4§nInvalid File§r\n\nFile must exist and must be in \nthe §l.png§r format.",
+  "skinshuffle.edit.source.invalid_file": "§4§n올바르지 않은 파일§r\n\n파일은 §l.png§r포맷으로 존재해야 합니다.",
   "skinshuffle.edit.source.url": "URL",
-  "skinshuffle.edit.source.invalid_url": "§4§nInvalid URL§r\n\nURL is invalid. Must be either a \nvalid §lhttp§r or §lhttps§r URL.",
+  "skinshuffle.edit.source.invalid_url": "§4§n올바르지 않은 URL§r\n\nURL은 §lhttp§r 또는 §lhttps§r 로 시작해야 합니다.",
   "skinshuffle.edit.source.uuid": "UUID",
-  "skinshuffle.edit.source.invalid_uuid": "§4§nInvalid UUID§r\n\nUUID must be in the following format:\n§lxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
+  "skinshuffle.edit.source.invalid_uuid": "§4§n올바르지 않은 UUID§r\n\nUUID는 이 형식을 따라야 합니다:\n§lxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx",
   "skinshuffle.edit.source.resource_location": "리소스 위치",
-  "skinshuffle.edit.source.invalid_resource_location": "§4§nInvalid Resource Location§r\n\nResource location must be a valid\ntexture file that is loaded by the game.",
+  "skinshuffle.edit.source.invalid_resource_location": "§4§n올바르지 않은 리소스 위치§r\n\n리소스 텍스쳐는 게임에 불러와져 있어야 합니다.",
   "skinshuffle.edit.source.unchanged": "변경 없음",
   "skinshuffle.edit.source.cycle_prefix": "파일 위치",
   "skinshuffle.edit.source.title": "스킨 파일 위치",
